traefik/dashboard/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: dashboard.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-dashboard
          servicePort: dashboard
  tls:
  - secretName: localhost-tls
    hosts:
      - dashboard.localhost
